[gd_scene load_steps=14 format=3 uid="uid://c40t7bit36dy5"]

[ext_resource type="Script" uid="uid://crvs8acj0ic06" path="res://Scripts/tank.gd" id="1_nxogm"]
[ext_resource type="Shader" uid="uid://bgn3ds0giiqu6" path="res://Shaders/circle_shader.gdshader" id="2_3253y"]
[ext_resource type="Shader" uid="uid://bg4eycg28m0gd" path="res://Shaders/barrel.gdshader" id="3_3253y"]
[ext_resource type="Script" uid="uid://d06xv8j0swvox" path="res://Scripts/asset_loader.gd" id="5_m7jmp"]
[ext_resource type="Script" uid="uid://d1avrjdmssbus" path="res://Scripts/Upgrades/UpgradeMenu.gd" id="6_y2354"]
[ext_resource type="Script" uid="uid://blfqvfprv47mh" path="res://Scripts/Upgrades/upgrade_trigger.gd" id="7_ni31j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_drvgu"]
shader = ExtResource("2_3253y")
shader_parameter/circle_color = Vector4(0, 0.5, 1, 1)
shader_parameter/radius = 0.453
shader_parameter/border_thickness = 0.025

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_nxogm"]
size = Vector2(4, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_3253y"]
radius = 38.0132

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u3cyc"]
shader = ExtResource("3_3253y")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3253y"]
size = Vector2(3, 3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ni31j"]
shader = ExtResource("3_3253y")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xlvrw"]
size = Vector2(3, 3)

[node name="Scene" type="Node2D"]
script = ExtResource("5_m7jmp")

[node name="Tank" type="CharacterBody2D" parent="."]
position = Vector2(71, 50)
script = ExtResource("1_nxogm")

[node name="Body" type="Sprite2D" parent="Tank"]
material = SubResource("ShaderMaterial_drvgu")
position = Vector2(1.90735e-06, 0)
scale = Vector2(20, 19.88)
texture = SubResource("PlaceholderTexture2D_nxogm")

[node name="Collision" type="CollisionShape2D" parent="Tank"]
shape = SubResource("CircleShape2D_3253y")
debug_color = Color(0.94902, 0.0745098, 0.129412, 0.145098)

[node name="Gun" type="Node2D" parent="Tank"]
position = Vector2(37, 0)

[node name="Barrel" type="Sprite2D" parent="Tank/Gun"]
z_index = -1
material = SubResource("ShaderMaterial_u3cyc")
position = Vector2(3.69549e-06, 0)
scale = Vector2(25, -9.425)
texture = SubResource("PlaceholderTexture2D_3253y")

[node name="Muzzle" type="Marker2D" parent="Tank/Gun"]
position = Vector2(37, -1)

[node name="ReloadTimer" type="Timer" parent="Tank/Gun"]

[node name="asset_loader" type="Node" parent="."]
script = ExtResource("5_m7jmp")

[node name="UI" type="Node" parent="."]

[node name="UpgradeMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_top = 294.0
offset_right = 40.0
offset_bottom = 334.0
scale = Vector2(3.52, 8.81224)
script = ExtResource("6_y2354")

[node name="Sprite2D" type="Sprite2D" parent="UI/UpgradeMenu"]
material = SubResource("ShaderMaterial_ni31j")
position = Vector2(12.5, 16.9083)
scale = Vector2(15.9631, 14.8977)
texture = SubResource("PlaceholderTexture2D_xlvrw")

[node name="UpgradeTrigger" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0
grow_vertical = 0
scale = Vector2(3.56, -8.76)
script = ExtResource("7_ni31j")

[connection signal="timeout" from="Tank/Gun/ReloadTimer" to="Tank" method="_on_reload_timer_timeout"]
